--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "style-loader": "^0.18.2",
+    "sweetalert": "^1.1.3",
     "url-loader": "^0.5.8",
     "vue-loader": "^12.1.0",
     "vue-resource": "^1.3.4",
